Read memcached address from revel config file.

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -26,6 +26,7 @@ module.static=github.com/robfig/revel/modules/static
 mode.dev=true
 results.pretty=true
 watch=true
+memcached=127.0.0.1:11211
 
 module.testrunner = github.com/robfig/revel/modules/testrunner
 
@@ -38,6 +39,7 @@ log.error.output = stderr
 mode.dev=false
 results.pretty=false
 watch=false
+memcached=127.0.0.1:11211
 
 module.testrunner =
 
