--- a/public/.jshintrc
+++ b/public/.jshintrc
@@ -2,5 +2,5 @@
   "globalstrict": true,
   "browser": true,
   "jquery": true,
-  "globals": { "angular": true, "Highcharts": true, "NProgress": true }
+  "globals": { "Modernizr": true, "angular": true, "Highcharts": true, "NProgress": true }
 }
