--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ services:
     - memcached
 
 install:
+    - export GOPATH=$HOME/gopath
+    - export PATH=$PATH:$GOPATH/bin
     - go get -v github.com/robfig/revel/revel
 
 script:
