--- a/conf/app.conf
+++ b/conf/app.conf
@@ -11,6 +11,7 @@ cookie.secure=false
 format.date=01/02/2006
 format.datetime=01/02/2006 15:04
 results.chunked=false
+template.delimiters="{% %}"
 
 log.trace.prefix = "TRACE "
 log.info.prefix  = "INFO  "
