--- a/public/package.json
+++ b/public/package.json
@@ -8,15 +8,20 @@
     "email": "codeb2cc@gmail.com",
     "url": "http://codeb2cc.com"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/codeb2cc/gmcadmin.git"
+  },
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-jshint": "~0.6.2",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-uglify": "~0.2.2",
-    "grunt-contrib-watch": "~0.5.1",
-    "grunt-contrib-copy": "~0.4.1",
+    "grunt": "~0.4.5",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-concat": "~0.4.0",
+    "grunt-contrib-uglify": "~0.4.0",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-connect": "~0.3.0",
-    "grunt-recess": "~0.3.3"
-  }
+    "grunt-contrib-connect": "~0.7.1",
+    "grunt-contrib-less": "~0.11.0"
+  },
+  "license": "MIT"
 }
